...
                            child: Padding(
                              padding:
                                  const EdgeInsets.only(left: 8.0, right: 8.0),
                              child: Column(
                                children: [
                                  HomeCardWidget(
                                    key: const Key('characters_buton'),
                                    title: 'Lista de Personagens',
                                    description:
                                        'Lista completa dos personagens de Rick and Morty.',
                                    iconData: Icons.list_rounded,
                                    imageAsset: characters,
                                    route: Routes.CHARACTERS,
...
                                        'Busque por personagens do seu interesse quando quiser!',
                                    iconData: Icons.search,
                                    imageAsset: search,
                                    route: Routes.SEARCH,
                                  ),
                                  HomeCardWidget(
                                    key: const Key('favorites_buton'),
                                    title: 'Favoritos',
                                    description:
                                        'Veja todos os personagens que você marcou como favorito.',
                                    iconData: Icons.favorite,
                                    imageAsset: favorites,
                                    route: Routes.FAVORITES,
...
